nvim/rust/plugins/smear-cursor/src/core/runtime_reducer/tests/snapshots/nvimrs_smear_cursor__core__runtime_reducer__tests__trajectory_goldens__cmdline_clear_redraw_when_runtime_is_disabled.snap
---
source: plugins/smear-cursor/src/core/runtime_reducer/tests/trajectory_goldens.rs
assertion_line: 163
expression: transcript.render()
---
00 ext t=100.000 pos=3.000,8.000 surf=10/20 motion=cont action=clear_all center=0.000,0.000 target=0.000,0.000 next=- cleanup=invalidate alloc=reuse vis=show cmdline_clear_redraw=1 sched=0 state=a0s0d0 stroke=0 epoch=0
final center=0.000,0.000 target=0.000,0.000 state=a0s0d0 stroke=0 epoch=0
