nvim/rust/plugins/smear-cursor/src/core/runtime_reducer/tests/snapshots/nvimrs_smear_cursor__core__runtime_reducer__tests__trajectory_goldens__diagonal_zig_zag_motion.snap
---
source: plugins/smear-cursor/src/core/runtime_reducer/tests/trajectory_goldens.rs
assertion_line: 88
expression: transcript.render()
---
00 ext t=100.000 pos=5.000,6.000 surf=10/20 motion=cont action=draw samples=[5.500,6.500@4.167] center=5.500,6.500 target=5.000,6.000 next=- cleanup=schedule alloc=bootstrap vis=show sched=0 state=a0s0d0 stroke=1 epoch=1
01 ext t=108.000 pos=9.000,12.000 surf=10/20 motion=cont action=draw samples=[5.542,6.562@4.167;5.650,6.726@4.167;5.807,6.960@4.167] center=5.807,6.960 target=9.000,12.000 next=121 cleanup=invalidate alloc=reuse vis=hide sched=1 state=a1s0d0 stroke=1 epoch=2
02 tick t=116.000 pos=9.000,12.000 surf=10/20 motion=cont action=draw samples=[5.996,7.243@4.167;6.204,7.556@4.167] center=6.204,7.556 target=9.000,12.000 next=121 cleanup=invalidate alloc=reuse vis=hide sched=1 state=a1s0d0 stroke=1 epoch=2
03 ext t=124.000 pos=4.000,20.000 surf=10/20 motion=cont action=draw samples=[6.371,7.968@4.167;6.458,8.520@4.167] center=6.458,8.520 target=4.000,20.000 next=135 cleanup=invalidate alloc=reuse vis=hide sched=1 state=a1s0d0 stroke=1 epoch=3
04 tick t=132.000 pos=4.000,20.000 surf=10/20 motion=cont action=draw samples=[6.483,9.164@4.167;6.463,9.865@4.167] center=6.463,9.865 target=4.000,20.000 next=135 cleanup=invalidate alloc=reuse vis=hide sched=1 state=a1s0d0 stroke=1 epoch=3
05 ext t=140.000 pos=10.000,28.000 surf=10/20 motion=cont action=draw samples=[6.471,10.675@4.167;6.557,11.626@4.167] center=6.557,11.626 target=10.000,28.000 next=149 cleanup=invalidate alloc=reuse vis=hide sched=1 state=a1s0d0 stroke=1 epoch=4
06 tick t=148.000 pos=10.000,28.000 surf=10/20 motion=cont action=draw samples=[6.698,12.661@4.167] center=6.698,12.661 target=10.000,28.000 next=149 cleanup=invalidate alloc=reuse vis=hide sched=1 state=a1s0d0 stroke=1 epoch=4
07 tick t=156.000 pos=10.000,28.000 surf=10/20 motion=cont action=draw samples=[6.878,13.740@4.167;7.082,14.828@4.167] center=7.082,14.828 target=10.000,28.000 next=163 cleanup=invalidate alloc=reuse vis=hide sched=1 state=a1s0d0 stroke=1 epoch=4
final center=7.082,14.828 target=10.000,28.000 state=a1s0d0 stroke=1 epoch=4 surf=10/20
