nvim/rust/plugins/smear-cursor/src/core/runtime_reducer/tests/snapshots/nvimrs_smear_cursor__core__runtime_reducer__tests__trajectory_goldens__scroll_while_animating.snap
---
source: plugins/smear-cursor/src/core/runtime_reducer/tests/trajectory_goldens.rs
expression: transcript.render()
---
00 ext t=100.000 pos=15.000,6.000 surf=10/20 motion=cont action=draw samples=[15.500,6.500@4.167] center=15.500,6.500 target=15.000,6.000 next=- cleanup=schedule alloc=bootstrap vis=show sched=0 state=a0s0d0 stroke=1 epoch=1
01 ext t=108.000 pos=24.000,6.000 surf=10/20 motion=jump action=draw samples=[15.593,6.500@4.167] center=15.593,6.500 target=24.000,6.000 next=114 cleanup=invalidate alloc=reuse vis=hide sched=1 state=a1s0d0 stroke=1 epoch=2
02 tick t=116.000 pos=24.000,6.000 surf=10/20 motion=cont action=draw samples=[15.839,6.500@4.167;16.191,6.500@4.167] center=16.191,6.500 target=24.000,6.000 next=121 cleanup=invalidate alloc=reuse vis=hide sched=1 state=a1s0d0 stroke=1 epoch=2
03 ext t=124.000 pos=24.000,12.000 surf=10/20 scroll=2.000[1.000..60.000] motion=cont action=draw samples=[14.636,6.562@4.167;15.160,6.726@4.167] center=15.160,6.726 target=24.000,12.000 next=128 cleanup=invalidate alloc=reuse vis=hide sched=1 state=a1s0d0 stroke=1 epoch=3
04 tick t=132.000 pos=24.000,12.000 surf=10/20 motion=cont action=draw samples=[15.731,6.960@4.167;16.327,7.243@4.167] center=16.327,7.243 target=24.000,12.000 next=135 cleanup=invalidate alloc=reuse vis=hide sched=1 state=a1s0d0 stroke=1 epoch=3
05 tick t=140.000 pos=24.000,12.000 surf=10/20 scroll=1.000[1.000..60.000] motion=cont action=draw samples=[16.928,7.556@4.167;17.522,7.885@4.167] center=17.522,7.885 target=24.000,12.000 next=142 cleanup=invalidate alloc=reuse vis=hide sched=1 state=a1s0d0 stroke=1 epoch=3
06 tick t=148.000 pos=24.000,12.000 surf=10/20 motion=cont action=draw samples=[18.098,8.219@4.167;18.650,8.550@4.167] center=18.650,8.550 target=24.000,12.000 next=149 cleanup=invalidate alloc=reuse vis=hide sched=1 state=a1s0d0 stroke=1 epoch=3
final center=18.650,8.550 target=24.000,12.000 state=a1s0d0 stroke=1 epoch=3 surf=10/20
