nvim/rust/plugins/smear-cursor/src/core/runtime_reducer/tests/snapshots/nvimrs_smear_cursor__core__runtime_reducer__tests__trajectory_goldens__surface_retarget_for_small_cross_window_motion.snap
---
source: plugins/smear-cursor/src/core/runtime_reducer/tests/trajectory_goldens.rs
expression: transcript.render()
---
00 ext t=100.000 pos=5.000,6.000 surf=10/20 motion=cont action=draw samples=[5.500,6.500@4.167] center=5.500,6.500 target=5.000,6.000 next=- cleanup=schedule alloc=bootstrap vis=show sched=0 state=a0s0d0 stroke=1 epoch=1
01 ext t=108.000 pos=8.000,12.000 surf=11/20 motion=surface action=draw samples=[5.531,6.562@4.167;5.613,6.726@4.167;5.730,6.960@4.167] center=5.730,6.960 target=8.000,12.000 next=121 cleanup=invalidate alloc=reuse vis=hide sched=1 state=a1s0d0 stroke=2 epoch=2
02 tick t=116.000 pos=8.000,12.000 surf=11/20 motion=cont action=draw samples=[5.872,7.243@4.167;6.028,7.556@4.167] center=6.028,7.556 target=8.000,12.000 next=121 cleanup=invalidate alloc=reuse vis=hide sched=1 state=a1s0d0 stroke=2 epoch=2
final center=6.028,7.556 target=8.000,12.000 state=a1s0d0 stroke=2 epoch=2 surf=11/20
