nvim/rust/plugins/smear-cursor/src/core/runtime_reducer/tests/snapshots/nvimrs_smear_cursor__core__runtime_reducer__tests__trajectory_goldens__window_resize_while_animating.snap
---
source: plugins/smear-cursor/src/core/runtime_reducer/tests/trajectory_goldens.rs
assertion_line: 405
expression: transcript.render()
---
00 ext t=100.000 pos=15.000,18.000 surf=10/20 motion=cont action=draw samples=[15.500,18.500@4.167] center=15.500,18.500 target=15.000,18.000 next=- cleanup=schedule alloc=bootstrap vis=show sched=0 state=a0s0d0 stroke=1 epoch=1
01 ext t=108.000 pos=15.000,24.000 surf=10/20 motion=cont action=draw samples=[15.500,18.562@4.167;15.500,18.726@4.167;15.500,18.960@4.167] center=15.500,18.960 target=15.000,24.000 next=121 cleanup=invalidate alloc=reuse vis=hide sched=1 state=a1s0d0 stroke=1 epoch=2
02 tick t=116.000 pos=15.000,24.000 surf=10/20 motion=cont action=draw samples=[15.500,19.243@4.167;15.500,19.556@4.167] center=15.500,19.556 target=15.000,24.000 next=121 cleanup=invalidate alloc=reuse vis=hide sched=1 state=a1s0d0 stroke=1 epoch=2
03 ext t=124.000 pos=15.000,24.000 surf=10/20 semantic=ViewportOrWindowMoved motion=surface action=clear_all center=15.500,24.500 target=15.000,24.000 next=- cleanup=schedule alloc=reuse vis=show sched=0 state=a0s0d0 stroke=2 epoch=3
04 tick t=132.000 pos=15.000,24.000 surf=10/20 motion=cont action=noop center=15.500,24.500 target=15.000,24.000 next=- cleanup=none alloc=reuse vis=show sched=0 state=a0s0d0 stroke=2 epoch=3
final center=15.500,24.500 target=15.000,24.000 state=a0s0d0 stroke=2 epoch=3 surf=10/20
